# vacuum

./: CMakeLists.txt  README.md  bonus.txt  output_input_dupdock.txt  output_input_nodock.txt
examples/: input_a.house  input_a.txt  input_b.house  input_b.txt  input_c.house  input_c.txt  output_a.txt  output_b.txt  output_c.txt  output_input_b.txt  output_input_c.txt
src/: CMakeLists.txt  abstractalgorithm.h  algorithm.cc  algorithm.h  battery.h  battery_meter.h  batterycontroller.h  batterymeter.h  batterysensor.h  deserializer.cc  deserializer.h  direction.h  dirt_sensor.h  dirtsensor.h  enum_operators.cc  enum_operators.h  enums.h  house.cc  house.h  input_a.txt  input_handler.cc  input_handler.h  locationmanager.cc  locationmanager.h  logger.cc  logger.h  main.cc  main.h  navigationsystem.cc  navigationsystem.h  output_handler.cc  output_handler.h  output_input_a.txt  path_tree.cc  path_tree.h  pathtree.cc  pathtree.h  position.h  robot.cc  robot.h  (+19 more)
src/algorithm/: AlgorithmRegistration.h  CMakeLists.txt  base_algorithm.cc  base_algorithm.h  path_tree.cc  path_tree.h
src/algorithm/a/: algorithm.cc  algorithm.h  greedy_algorithm.cc  greedy_algorithm.h
src/algorithm/b/: dfs_algorithm.cc  dfs_algorithm.h
src/common/: AlgorithmRegistrar.h  abstract_algorithm.h  position.h  wall_sensor.h
src/simulator/: battery.h  deserializer.cc  deserializer.h  enum_operators.cc  enum_operators.h  house.cc  house.h  logger.cc  logger.h  robot_logger.h  serializer.h  simulate.py  simulator.cc  simulator.h
tests/: CMakeLists.txt  algorithm_test.cc  battery_test.cc  batterycontroller_test.cc  deserializer_test.cc  house_test.cc  locationmanager_test.cc  navigationsystem_test.cc  path_tree_test.cc  pathtree_test.cc  robot_test.cc  robotdeserializer_test.cc  simulator_test.cc  threading_test.cc
tests/inputs/: input_allchars.txt  input_distantdirt.txt  input_dupdock.txt  input_invchar.txt  input_invparam.txt  input_maze.txt  input_minbattery.txt  input_missparam.txt  input_missvalue.txt  input_mockalgo_dead.txt  input_nodirt.txt  input_nodock.txt  input_nohouse.txt  input_returnbest.txt  input_sanity.txt  input_trappeddirt.txt
